codigo de pagina nosotros y css

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
             <p class="producto__precio">$25</p>
           </a>
         </div>
-        <div>
+        <div class="producto">
           <a href="producto.html">
             <img src="./img/10.jpg" alt="imagen camisa" />
             <p class="producto__nombre">TypeScript</p>
