--- a/nosotros.html
+++ b/nosotros.html
@@ -44,11 +44,61 @@
             repellat suscipit sint.
           </p>
         </div>
-        <img class="nosotros__imagen" src="./img/nosotros.jpg" alt="imagen nosotros">
+        <img
+          class="nosotros__imagen"
+          src="./img/nosotros.jpg"
+          alt="imagen nosotros"
+        />
       </section>
-      <section>
-        
+
+      <section class="contenedor">
+        <h2>¿Por qué comprar con nosotros?</h2>
+        <div class="bloques">
+          <div class="bloque">
+            <img src="./img/icono_1.png" alt="imagen El mejor precio" />
+            <h3 class="bloque__titulo">El mejor precio</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatum accusamus exercitationem nemo aliquam molestiae
+              corrupti tempore assumenda, commodi, esse autem earum magni
+              quibusdam est delectus nihil provident natus sed. Quidem.
+            </p>
+          </div>
+          <div class="bloque">
+            <img src="./img/icono_2.png" alt="imagen El mejor precio" />
+            <h3 class="bloque__titulo">Para Devs</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatum accusamus exercitationem nemo aliquam molestiae
+              corrupti tempore assumenda, commodi, esse autem earum magni
+              quibusdam est delectus nihil provident natus sed. Quidem.
+            </p>
+          </div>
+          <div class="bloque">
+            <img src="./img/icono_3.png" alt="imagen El mejor precio" />
+            <h3 class="bloque__titulo">Envio Gratis</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatum accusamus exercitationem nemo aliquam molestiae
+              corrupti tempore assumenda, commodi, esse autem earum magni
+              quibusdam est delectus nihil provident natus sed. Quidem.
+            </p>
+          </div>
+          <div class="bloque">
+            <img src="./img/icono_4.png" alt="imagen El mejor precio" />
+            <h3 class="bloque__titulo">La mejor calidad</h3>
+            <p>
+              Lorem ipsum dolor sit amet consectetur adipisicing elit.
+              Voluptatum accusamus exercitationem nemo aliquam molestiae
+              corrupti tempore assumenda, commodi, esse autem earum magni
+              quibusdam est delectus nihil provident natus sed. Quidem.
+            </p>
+          </div>
+        </div>
       </section>
     </main>
+    <footer class="footer">
+      <p class="footer__texto">Tienda -- Todos los derechos reservados</p>
+  </footer>
   </body>
 </html>
